# bellman-ford-mpi

./: CMakeLists.txt  Makefile  README.md  belman-ford-better.c  belman-ford.c  generateInput.py  input1.txt  input2.txt  input_10.txt  nodes  output.txt  output_new.txt  output_newest.txt
include/: graph.h
input/: input_300.txt  input_simple.txt
output/: output_10_2_9.txt  output_300_3_241.txt  output_simple.txt
src/: bellman-ford.c  graph.c
